objects/QIDC__MDM_Object_Mapping_ims__c.object
<CustomObject>
    <description>Defines mappings between OneKey entities and SFDC Objects (SObject)</description>
    <fields>
        <fullName>QIDC__ParentEntityTypeURI_ims__c</fullName>
        <description>This field is used to store URI of Parent Entity.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This field is used to store URI of Parent Entity.</inlineHelpText>
        <label>Parent Entity Type URI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Parent_Entity_ims__c</fullName>
        <description>Stores relationships to other entities.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Stores relationships to other entities.</inlineHelpText>
        <label>Parent Entity</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Parent_Relation_Type_ims__c</fullName>
        <label>Parent Relation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ParentId</fullName>
                </value>
                <value>
                    <fullName>One to Many</fullName>
                </value>
                <value>
                    <fullName>Many to Many</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QIDC__SObjectType_ims__c</fullName>
        <description>The API Name of the SObject type.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The API Name of the SObject type.</inlineHelpText>
        <label>Salesforce Objet</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Type_ims__c</fullName>
        <description>This field is used to determine the type of entity (i.e Relation, Nested, Reference)</description>
        <inlineHelpText>This field is used to determine the type of entity (i.e Relation, Nested, Reference)</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Relation</fullName>
                </value>
                <value>
                    <fullName>Nested</fullName>
                </value>
                <value>
                    <fullName>Reference</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QIDC__URI_ims__c</fullName>
        <description>Path that is used to reach the entity type.
Format: configuration/entityTypes/{EntityTypeName}

Example:
configuration/entityTypes/Individual</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Path that is used to reach the entity type.
Format: configuration/entityTypes/{EntityTypeName}

Example:
configuration/entityTypes/Individual</inlineHelpText>
        <label>URI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>MDM Object Mapping</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>MDM Entity</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MDM Object Mappings</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>